# CoreGen

./: .codedocs  .gitignore  CMakeLists.txt  LICENSE  README.Chisel.md  README.ORIG  README.md  aspdag.lp
archive/: CMakeLists.txt  master.yaml
include/CoreGen/: CMakeLists.txt
include/CoreGen/CoreGenArchive/: CMakeLists.txt  CoreGenArchive.h
include/CoreGen/CoreGenBackend/: CMakeLists.txt  CoreGenBackend.h  CoreGenCache.h  CoreGenComm.h  CoreGenCore.h  CoreGenDAG.h  CoreGenDataPath.h  CoreGenEncoding.h  CoreGenEnv.h  CoreGenErrno.h  CoreGenExt.h  CoreGenISA.h  CoreGenInst.h  CoreGenInstFormat.h  CoreGenMCtrl.h  CoreGenNode.h  CoreGenNodes.h  CoreGenPass.h  CoreGenPassMgr.h  CoreGenPlugin.h  CoreGenPluginMgr.h  CoreGenPluginTypes.h  CoreGenProj.h  CoreGenPseudoInst.h  CoreGenReg.h  CoreGenRegClass.h  CoreGenSoC.h  CoreGenSpad.h  CoreGenUtil.h  CoreGenVLIWStage.h  CoreGenVTP.h  CoreGenVersion.h  CoreGenYaml.h
include/CoreGen/CoreGenCodegen/: CMakeLists.txt  CoreGenChiselCodegen.h  CoreGenChiselParms.h  CoreGenCodegen.h  CoreGenCompCodegen.h  CoreGenLLVMCodegen.h  CoreGenLLVMCodegens.h  CoreGenNodeCodegen.h  CoreGenNodeCodegens.h
include/CoreGen/CoreGenPlugin/: CMakeLists.txt  CoreGenPluginImpl.h
include/CoreGen/CoreGenSigMap/: CMakeLists.txt  CoreGenSigMap.h  SCSig.h  SCTmp.h  SMPass.h  SMPasses.h
include/CoreGen/DHDT/: CMakeLists.txt  DHDTConfig.h  DHDTGraph.h  DHDTInst.h  DHDTOpts.h
include/CoreGen/Poar/: CMakeLists.txt  PoarAccum.h  PoarAccums.h  PoarConfig.h  PoarData.h  PoarIO.h  PoarOpts.h
include/CoreGen/StoneCutter/: CMakeLists.txt  SCAST.h  SCChiselCodeGen.h  SCExec.h  SCIntrin.h  SCIntrinsics.h  SCLLCodeGen.h  SCLexer.h  SCMsg.h  SCOpts.h  SCParser.h  SCPass.h  SCPasses.h  SCPerf.h  SCPipeInfo.h  SCUtil.h  StoneCutter.h
src/: CMakeLists.txt
src/CGCLI/: CGCLIConfig.h.in  CGCLIMain.cpp  CGCLIOpts.cpp  CGCLIOpts.h  CMakeLists.txt
src/CoreGen-Config/: CMakeLists.txt  CoreGen-Config.cpp
src/CoreGenArchive/: CMakeLists.txt  CoreGenArchive.cpp
src/CoreGenBackend/: CMakeLists.txt  CoreGenBackend.cpp  CoreGenCache.cpp  CoreGenComm.cpp  CoreGenCore.cpp  CoreGenDAG.cpp  CoreGenDataPath.cpp  CoreGenEncoding.cpp  CoreGenEnv.cpp  CoreGenErrno.cpp  CoreGenExt.cpp  CoreGenISA.cpp  CoreGenInst.cpp  CoreGenInstFormat.cpp  CoreGenMCtrl.cpp  CoreGenNode.cpp  CoreGenPassMgr.cpp  CoreGenPlugin.cpp  CoreGenPluginMgr.cpp  CoreGenProj.cpp  CoreGenPseudoInst.cpp  CoreGenReg.cpp  CoreGenRegClass.cpp  CoreGenSoC.cpp  CoreGenSpad.cpp  CoreGenVLIWStage.cpp  CoreGenVTP.cpp  CoreGenYaml.cpp
src/CoreGenBackend/Passes/: CMakeLists.txt
src/CoreGenCodegen/: CMakeLists.txt  CoreGenChiselCodegen.cpp  CoreGenChiselParms.cpp  CoreGenCodegen.cpp  CoreGenCompCodegen.cpp  CoreGenLLVMCodegen.cpp  CoreGenNodeCodegen.cpp
src/CoreGenCodegen/LLVMCodegen/: CMakeLists.txt  LLVM801CG.cpp  LLVM901CG.cpp
src/CoreGenCodegen/NodeCodegen/: CMakeLists.txt  CacheCG.cpp  DPathCG.cpp  ISACG.cpp  PluginCG.cpp  RegClassCG.cpp  SocCG.cpp  SpadCG.cpp
src/CoreGenPlugin/: CMakeLists.txt  CoreGenPluginImpl.cpp
src/CoreGenPlugin/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp  SamplePlugin.h
src/CoreGenSigMap/: CMakeLists.txt  CoreGenSigMap.cpp  SCSig.cpp  SCTmp.cpp
src/CoreGenSigMap/Passes/: CMakeLists.txt  SMLegalizeSigMap.cpp
src/DHDT/: CMakeLists.txt  DHDTConfig.cpp  DHDTGraph.cpp  DHDTInst.cpp  DHDTMain.cpp  DHDTOpts.cpp
src/Poar/: .func.dot  CMakeLists.txt  PoarConfig.cpp  PoarData.cpp  PoarIO.cpp  PoarMain.cpp  PoarOpts.cpp
src/Poar/Accumulators/: CMakeLists.txt  PoarALUAccum.cpp  PoarALUCPathAccum.cpp  PoarALUDPathAccum.cpp  PoarALURegAccum.cpp  PoarCPathAccum.cpp  PoarCacheAccum.cpp  PoarDPathAccum.cpp  PoarROMAccum.cpp  PoarRegAccum.cpp  PoarSpadAccum.cpp
src/SCComp/: CMakeLists.txt  SCComp.cpp
src/SCSigV/: CMakeLists.txt  SCSigV.cpp
src/StoneCutter/: CMakeLists.txt  SCChiselCodeGen.cpp  SCExec.cpp  SCLLCodeGen.cpp  SCLexer.cpp  SCMsg.cpp  SCMsg.h  SCOpts.cpp  SCParser.cpp  SCPass.cpp  SCPerf.cpp  SCPipeInfo.cpp  StoneCutter.h
src/StoneCutter/Intrinsics/: CMakeLists.txt  SCBsel.cpp  SCClz.cpp  SCCompress.cpp  SCCompressM.cpp  SCConcat.cpp  SCCtz.cpp  SCDoz.cpp  SCExtractS.cpp  SCExtractZ.cpp  SCFence.cpp  SCIn.cpp  SCInsertS.cpp  SCInsertZ.cpp  SCLoad.cpp  SCLoadElem.cpp  SCLss.cpp  SCMaj.cpp  SCMax.cpp  SCMerge.cpp  SCMin.cpp  SCNeg.cpp  SCNop.cpp  SCNot.cpp  SCOut.cpp  SCPopcount.cpp  SCReverse.cpp  SCRotateL.cpp  SCRotateR.cpp  SCSext.cpp  SCStore.cpp  SCStoreElem.cpp  SCZext.cpp
src/StoneCutter/Passes/: CMakeLists.txt  SCFieldIO.cpp  SCVLIW.cpp  (+8 more)
src/yaml/: CMakeLists.txt
test/: CMakeLists.txt
test/Archive/: ArchiveScriptTest1.tgz  CMakeLists.txt  archive_test_1.sh  archive_test_10.sh  archive_test_10.yaml  archive_test_11.sh  archive_test_11.yaml  archive_test_2.sh  archive_test_2.yaml  archive_test_3.sh  archive_test_3.yaml  archive_test_4.sh  archive_test_4.yaml  archive_test_5.sh  archive_test_5.yaml  archive_test_6.sh  archive_test_6.yaml  archive_test_7.sh  archive_test_7.yaml  archive_test_8.sh  archive_test_8.yaml  archive_test_9.sh  archive_test_9.yaml
test/CGCLI/: CMakeLists.txt  cgcli_asp_KF.sh  cgcli_cgversion.sh  cgcli_chisel.sh  cgcli_help.sh  cgcli_help_KF.sh  cgcli_listpasses.sh  cgcli_listsyspasses.sh  cgcli_opt.sh  cgcli_opt_ASP_Single.sh  cgcli_opt_DisableAll.sh  cgcli_opt_DisableMultiple.sh  cgcli_opt_DisableOne.sh  cgcli_opt_EnableAllAnalysis.sh  cgcli_opt_EnableAllData.sh  cgcli_opt_EnableAllOpt.sh  cgcli_query.sh  cgcli_query_KF.sh  cgcli_stonecutter.sh  cgcli_verify.sh  cgcli_verify_KF.sh  cgcli_version.sh  sample1.yaml  sample_archive.yaml
test/CodeGen/: CMakeLists.txt
test/Config/: CMakeLists.txt  coregen-config-test.sh
test/DAG/: CMakeLists.txt
test/DHDT/: CMakeLists.txt
test/Plugins/: CMakeLists.txt  plugin_load_test_1.cpp  plugin_load_test_10.cpp  plugin_load_test_2.cpp  plugin_load_test_3.cpp  plugin_load_test_4.cpp  plugin_load_test_5.cpp  plugin_load_test_6.cpp  plugin_load_test_7.cpp  plugin_load_test_8.cpp  plugin_load_test_9.cpp
test/Poar/: CMakeLists.txt
test/StoneCutter/: CMakeLists.txt
test/Yaml/: CMakeLists.txt
(+1532 files in other folders)
