# src CMakeLists.txt
#
# Copyright (C) 2017-2019 Tactical Computing Laboratories, LLC
# All Rights Reserved
# contact@tactcomplabs.com
#
# CoreGen can not be copied and/or distributed without the
# express permission of Tactical Computing Laboratories, LLC
#
add_subdirectory(CoreGenBackend)
add_subdirectory(CoreGenPlugin)
add_subdirectory(CoreGenCodegen)
add_subdirectory(CoreGenSigMap)
add_subdirectory(StoneCutter)
add_subdirectory(SCComp)
add_subdirectory(CGCLI)
add_subdirectory(thirdparty)
