# include/CoreGen CMakeLists.txt
#
# Copyright (C) 2017-2018 Tactical Computing Laboratories, LLC
# All Rights Reserved
# contact@tactcomplabs.com
#
# See LICENSE in the top level directory for licensing details
#
add_subdirectory(CoreGenBackend)
add_subdirectory(CoreGenPlugin)
add_subdirectory(CoreGenCodegen)
